--- a/bedrock.lua/bedrock.lua.vcxproj.filters
+++ b/bedrock.lua/bedrock.lua.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="Scripting\api\LuaAddonEngine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Utils\Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Utils\hook.cpp">
@@ -105,6 +108,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Scripting\api\LuaAddonEngine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Utils\Utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
