--- a/bedrock.lua/bedrock.lua.vcxproj
+++ b/bedrock.lua/bedrock.lua.vcxproj
@@ -170,6 +170,7 @@
     </PreLinkEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Hooks\HookBase.h" />
     <ClInclude Include="Scripting\api\LuaAddonEngine.h" />
     <ClInclude Include="Scripting\api\LuaIO.h" />
     <ClInclude Include="main.h" />
